--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>mooctest-website</title>
+    <title>2018全国大学生软件测试大赛</title>
   </head>
   <body>
     <div id="app"></div>
